--- a/kazakh/AmisLangpack/AmisLangpack.vcproj
+++ b/kazakh/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat kaz-KZ  ..\..\..\langpacks\kazakh ..\..\..\amis\bin\settings\lang debug"
+				CommandLine="..\..\..\amis\bin\copyLangpack.bat kaz-KZ  ..\..\..\langpacks\kazakh debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat kaz-KZ  ..\..\..\langpacks\kazakh ..\..\..\amis\bin\settings\lang release"
+				CommandLine="..\..\..\amis\bin\copyLangpack.bat kaz-KZ  ..\..\..\langpacks\kazakh release"
 			/>
 		</Configuration>
 	</Configurations>
