--- a/mongolian/AmisLangpack/AmisLangpack.vcproj
+++ b/mongolian/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat mon-MN  ..\..\..\langpacks\mongolian ..\..\..\amis\bin\settings\lang debug"
+				CommandLine="..\..\..\amis\bin\copyLangpack.bat mon-MN  ..\..\..\langpacks\mongolian debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat mon-MN  ..\..\..\langpacks\mongolian ..\..\..\amis\bin\settings\lang release"
+				CommandLine="..\..\..\amis\bin\copyLangpack.bat mon-MN  ..\..\..\langpacks\mongolian release"
 			/>
 		</Configuration>
 	</Configurations>
