--- a/afrikaans/AmisLangpack/AmisLangpack.vcproj
+++ b/afrikaans/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat afr-ZA  ..\..\..\langpacks\afrikaans debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat afr-ZA  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat afr-ZA  ..\..\..\langpacks\afrikaans release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat afr-ZA  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
