--- a/bangla/AmisLangpack/AmisLangpack.vcproj
+++ b/bangla/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat ben-BD  ..\..\bangla debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat ben-BD  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat ben-BD  ..\..\bangla release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat ben-BD  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
