--- a/chinese/AmisLangpack/AmisLangpack.vcproj
+++ b/chinese/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat zho-CN  ..\..\chinese debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat zho-CN  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat zho-CN  ..\..\chinese release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat zho-CN  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
