--- a/chinese_traditional/AmisLangpack/AmisLangpack.vcproj
+++ b/chinese_traditional/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat zho-TW  ..\..\chinese_traditional debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat zho-TW  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat zho-TW  ..\..\chinese_traditional release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat zho-TW  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
