--- a/dutch/AmisLangpack/AmisLangpack.vcproj
+++ b/dutch/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat nld-NL  ..\..\..\langpacks\dutch debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat nld-NL  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat nld-NL  ..\..\..\langpacks\dutch release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat nld-NL  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
