--- a/filipino/AmisLangpack/AmisLangpack.vcproj
+++ b/filipino/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat fil-PH  ..\..\filipino debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat fil-PH  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat fil-PH  ..\..\filipino release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat fil-PH  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
