--- a/finnish/AmisLangpack/AmisLangpack.vcproj
+++ b/finnish/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat fin-FI  ..\..\..\langpacks\finnish debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat fin-FI  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat fin-FI  ..\..\..\langpacks\finnish release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat fin-FI  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
