--- a/french/AmisLangpack/AmisLangpack.vcproj
+++ b/french/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat fra-FR  ..\..\..\langpacks\french debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat fra-FR  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat fra-FR  ..\..\..\langpacks\french release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat fra-FR  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
