--- a/hebrew/AmisLangpack/AmisLangpack.vcproj
+++ b/hebrew/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat heb-IL  ..\..\hebrew debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat heb-IL  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat heb-IL  ..\..\hebrew release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat heb-IL  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
