--- a/japanese/AmisLangpack/AmisLangpack.vcproj
+++ b/japanese/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat jpn-JP  ..\..\japanese debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat jpn-JP  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat jpn-JP  ..\..\japanese release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat jpn-JP  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
