--- a/lao/AmisLangpack/AmisLangpack.vcproj
+++ b/lao/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat lao-LA  ..\..\..\langpacks\lao debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat lao-LA  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat lao-LA  ..\..\..\langpacks\lao release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat lao-LA  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
