--- a/malay/AmisLangpack/AmisLangpack.vcproj
+++ b/malay/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat may-MY  ..\..\malay debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat may-MY  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat may-MY  ..\..\malay release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat may-MY  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
