--- a/norwegian-bokmal/AmisLangpack/AmisLangpack.vcproj
+++ b/norwegian-bokmal/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat nob-NO  ..\..\norwegian-bokmal debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat nob-NO  ..\..\norwegian-bokmal debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat nob-NO  ..\..\norwegian-bokmal release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat nob-NO  ..\..\norwegian-bokmal release"
 			/>
 		</Configuration>
 	</Configurations>
