--- a/norwegian-nynorsk/AmisLangpack/AmisLangpack.vcproj
+++ b/norwegian-nynorsk/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat nno-NO  ..\..\norwegian-nynorsk debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat nno-NO  ..\..\norwegian-nynorsk debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat nno-NO  ..\..\norwegian-nynorsk release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat nno-NO  ..\..\norwegian-nynorsk release"
 			/>
 		</Configuration>
 	</Configurations>
