--- a/serbian/AmisLangpack/AmisLangpack.vcproj
+++ b/serbian/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat srp-RS  ..\..\serbian debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat srp-RS  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="..\..\..\amis\bin\copyLangpack.bat srp-RS  ..\..\serbian release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat srp-RS  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
