--- a/sinhala/AmisLangpack/AmisLangpack.vcproj
+++ b/sinhala/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat sin-LK  ..\..\sinhala debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat sin-LK  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat sin-LK  ..\..\sinhala release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat sin-LK  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
