--- a/spanish/AmisLangpack/AmisLangpack.vcproj
+++ b/spanish/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat spa-ES  ..\..\spanish debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat spa-ES  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat spa-ES  ..\..\spanish release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat spa-ES  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
