--- a/tamil/AmisLangpack/AmisLangpack.vcproj
+++ b/tamil/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat tam-IN  ..\..\tamil debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat tam-IN  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat tam-IN  ..\..\tamil release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat tam-IN  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
