--- a/urdu/AmisLangpack/AmisLangpack.vcproj
+++ b/urdu/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat urd  ..\..\urdu debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat urd  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat urd  ..\..\urdu release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat urd  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
