--- a/vietnamese/AmisLangpack/AmisLangpack.vcproj
+++ b/vietnamese/AmisLangpack/AmisLangpack.vcproj
@@ -108,7 +108,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat vie-VN  ..\..\vietnamese debug"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat vie-VN  ..\ debug"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,7 +203,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="../../../amis/bin/copyLangpack.bat vie-VN  ..\..\vietnamese release"
+				CommandLine="..\..\..\amis\trunk\amis\bin\copyLangpack.bat vie-VN  ..\ release"
 			/>
 		</Configuration>
 	</Configurations>
